--- a/src/Coevery.Web/Core/Coevery.Core.csproj
+++ b/src/Coevery.Web/Core/Coevery.Core.csproj
@@ -103,19 +103,19 @@
     <Compile Include="Common\ResourceManifest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Common\Scripts\angular\angular-couchPotato.js" />
-    <Content Include="Common\Scripts\angular\angular-couchPotato.min.js" />
+    <Content Include="Common\Scripts\angular\couchPotato\angular-couchPotato.js" />
+    <Content Include="Common\Scripts\angular\couchPotato\angular-couchPotato.min.js" />
     <Content Include="Common\Scripts\angular\angular-resource.js" />
     <Content Include="Common\Scripts\angular\angular-resource.min.js" />
     <Content Include="Common\Scripts\angular\angular-route.js" />
     <Content Include="Common\Scripts\angular\angular-route.min.js" />
     <Content Include="Common\Scripts\angular\ui-router\angular-ui-router.js" />
     <Content Include="Common\Scripts\angular\ui-router\angular-ui-router.min.js" />
-    <Content Include="Common\Scripts\angular\angular-underscore.js" />
+    <Content Include="Common\Scripts\angular\underscore\angular-underscore.js" />
     <Content Include="Common\Scripts\angular\angular.js" />
     <Content Include="Common\Scripts\angular\angular.min.js" />
-    <Content Include="Common\Scripts\angular\i18next-1.6.3.js" />
-    <Content Include="Common\Scripts\angular\i18next-1.6.3.min.js" />
+    <Content Include="Common\Scripts\angular\i18next\i18next-1.6.3.js" />
+    <Content Include="Common\Scripts\angular\i18next\i18next-1.6.3.min.js" />
     <Content Include="Common\Scripts\angular\i18n\angular-locale.af-na.js" />
     <Content Include="Common\Scripts\angular\i18n\angular-locale.af-za.js" />
     <Content Include="Common\Scripts\angular\i18n\angular-locale.af.js" />
@@ -363,20 +363,20 @@
     <Content Include="Common\Scripts\angular\i18n\angular-locale.zu.js" />
     <Content Include="Common\Scripts\jQuery\jquery.pnotify.js" />
     <Content Include="Common\Scripts\jQuery\jquery.pnotify.min.js" />
-    <Content Include="Common\Scripts\angular\ng-i18next.js" />
-    <Content Include="Common\Scripts\angular\ng-i18next.min.js" />
-    <Content Include="Common\Scripts\angular\promise-tracker.js" />
+    <Content Include="Common\Scripts\angular\i18next\ng-i18next.js" />
+    <Content Include="Common\Scripts\angular\i18next\ng-i18next.min.js" />
+    <Content Include="Common\Scripts\angular\promise-tracker\promise-tracker.js" />
     <Content Include="Common\Scripts\require.js" />
     <Content Include="Common\Scripts\require.min.js" />
-    <Content Include="Common\Scripts\angular\spin.js" />
+    <Content Include="Common\Scripts\spin.js" />
     <Content Include="Common\Scripts\angular\ui-bootstrap\ui-bootstrap-tpls-0.4.0.js" />
     <Content Include="Common\Scripts\angular\ui-bootstrap\ui-bootstrap-tpls-0.4.0.min.js" />
-    <Content Include="Common\Scripts\angular\ui-utils-ieshiv.js" />
-    <Content Include="Common\Scripts\angular\ui-utils-ieshiv.min.js" />
-    <Content Include="Common\Scripts\angular\ui-utils.js" />
-    <Content Include="Common\Scripts\angular\ui-utils.min.js" />
-    <Content Include="Common\Scripts\angular\underscore.js" />
-    <Content Include="Common\Scripts\angular\underscore.min.js" />
+    <Content Include="Common\Scripts\angular\ui-utils\ui-utils-ieshiv.js" />
+    <Content Include="Common\Scripts\angular\ui-utils\ui-utils-ieshiv.min.js" />
+    <Content Include="Common\Scripts\angular\ui-utils\ui-utils.js" />
+    <Content Include="Common\Scripts\angular\ui-utils\ui-utils.min.js" />
+    <Content Include="Common\Scripts\angular\underscore\underscore.js" />
+    <Content Include="Common\Scripts\angular\underscore\underscore.min.js" />
     <Content Include="Common\Styles\module.css" />
     <Content Include="Settings\Module.txt" />
     <Content Include="Settings\Placement.info" />
@@ -438,7 +438,7 @@
     <Content Include="Common\Scripts\angular\angular-route.min.js.map" />
     <Content Include="Common\Scripts\angular\ui-router\angular-ui-router.min.js.map" />
     <Content Include="Common\Scripts\angular\angular.min.js.map" />
-    <Content Include="Common\Scripts\angular\underscore.min.js.map" />
+    <Content Include="Common\Scripts\angular\underscore\underscore.min.js.map" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Common\Views\ClientBootstrapScript.cshtml" />
