Update jQuery files and manifest for jquery

--- a/src/Coevery.Web/Core/Coevery.Core.csproj
+++ b/src/Coevery.Web/Core/Coevery.Core.csproj
@@ -361,11 +361,92 @@
     <Content Include="Common\Scripts\angular\i18n\angular-locale.zh.js" />
     <Content Include="Common\Scripts\angular\i18n\angular-locale.zu-za.js" />
     <Content Include="Common\Scripts\angular\i18n\angular-locale.zu.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.ar.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.bg-BG.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.bg.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.cat.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.cs.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.da.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.de.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.dk.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.el.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.en.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.es.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.fa.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.fi.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.fr.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.gl.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.he.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.hr-HR.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.hr.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.hu.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.id.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.is.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.it.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.ja.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.kr.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.lt.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.mne.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.nl.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.no.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.pl.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.pt-br.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.pt.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.ro.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.ru.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.sk.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.sr-latin.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.sr.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.sv.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.th.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.tr.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.ua.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.vi.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.zh-cn.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.zh-tw.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\jquery.jqGrid.min.js" />
+    <Content Include="Common\Scripts\jQuery\jqGrid\jquery.jqGrid.src.js" />
+    <Content Include="Common\Scripts\jQuery\jquery-1.9.1.js" />
+    <Content Include="Common\Scripts\jQuery\jquery-1.9.1.min.js" />
+    <Content Include="Common\Scripts\jQuery\jquery-ui-sliderAccess.js" />
+    <Content Include="Common\Scripts\jQuery\jquery-ui-timepicker-addon.js" />
+    <Content Include="Common\Scripts\jQuery\jquery-ui.js" />
+    <Content Include="Common\Scripts\jQuery\jquery-ui.min.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.mousewheel.js" />
     <Content Include="Common\Scripts\jQuery\jquery.pnotify.js" />
     <Content Include="Common\Scripts\jQuery\jquery.pnotify.min.js" />
     <Content Include="Common\Scripts\angular\i18next\ng-i18next.js" />
     <Content Include="Common\Scripts\angular\i18next\ng-i18next.min.js" />
     <Content Include="Common\Scripts\angular\promise-tracker\promise-tracker.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.simplePagination.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.autocomplete.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.autocomplete.min.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.core.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.core.min.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.datepicker.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.datepicker.min.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.effect-clip.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.effect-clip.min.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.effect-drop.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.effect-drop.min.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.effect.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.effect.min.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.menu.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.menu.min.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.mouse.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.mouse.min.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.position.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.position.min.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.slider.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.slider.min.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.sortable.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.sortable.min.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.tabs.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.tabs.min.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.widget.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.ui.widget.min.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.validate.js" />
+    <Content Include="Common\Scripts\jQuery\jquery.validate.min.js" />
     <Content Include="Common\Scripts\require.js" />
     <Content Include="Common\Scripts\require.min.js" />
     <Content Include="Common\Scripts\spin.js" />
@@ -444,6 +525,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Common\Views\ClientBootstrapScript.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Common\Scripts\jQuery\jquery.min.map" />
+    <Content Include="Common\Scripts\jQuery\jquery.validate.min.js.map" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
