Update jQuery style sheet

--- a/src/Coevery.Web/Core/Coevery.Core.csproj
+++ b/src/Coevery.Web/Core/Coevery.Core.csproj
@@ -458,8 +458,31 @@
     <Content Include="Common\Scripts\angular\ui-utils\ui-utils.min.js" />
     <Content Include="Common\Scripts\angular\underscore\underscore.js" />
     <Content Include="Common\Scripts\angular\underscore\underscore.min.js" />
+    <Content Include="Common\Styles\jQuery\colorbox.css" />
+    <Content Include="Common\Styles\jQuery\grid.css" />
+    <Content Include="Common\Styles\jQuery\images\colorbox\border.png" />
+    <Content Include="Common\Styles\jQuery\images\colorbox\controls.png" />
+    <Content Include="Common\Styles\jQuery\images\colorbox\loading.gif" />
+    <Content Include="Common\Styles\jQuery\images\colorbox\loading_background.png" />
+    <Content Include="Common\Styles\jQuery\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Common\Styles\jQuery\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Common\Styles\jQuery\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Common\Styles\jQuery\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Common\Styles\jQuery\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Common\Styles\jQuery\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Common\Styles\jQuery\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Common\Styles\jQuery\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Common\Styles\jQuery\images\ui-icons_222222_256x240.png" />
+    <Content Include="Common\Styles\jQuery\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Common\Styles\jQuery\images\ui-icons_454545_256x240.png" />
+    <Content Include="Common\Styles\jQuery\images\ui-icons_888888_256x240.png" />
+    <Content Include="Common\Styles\jQuery\images\ui-icons_cd0a0a_256x240.png" />
+    <Content Include="Common\Styles\jQuery\jquery-ui-1.9.2.custom.css" />
+    <Content Include="Common\Styles\jQuery\jquery-ui-timepicker-addon.css" />
     <Content Include="Common\Styles\jQuery\jquery.pnotify.css" />
     <Content Include="Common\Styles\jQuery\jquery.pnotify.icons.css" />
+    <Content Include="Common\Styles\jQuery\ui.datepicker.css" />
+    <Content Include="Common\Styles\jQuery\ui.jqgrid.css" />
     <Content Include="Common\Styles\module.css" />
     <Content Include="Settings\Module.txt" />
     <Content Include="Settings\Placement.info" />
