Add missing files

--- a/src/Coevery.Web/Core/Coevery.Core.csproj
+++ b/src/Coevery.Web/Core/Coevery.Core.csproj
@@ -361,6 +361,18 @@
     <Content Include="Common\Scripts\angular\i18n\angular-locale.zh.js" />
     <Content Include="Common\Scripts\angular\i18n\angular-locale.zu-za.js" />
     <Content Include="Common\Scripts\angular\i18n\angular-locale.zu.js" />
+    <Content Include="Common\Scripts\app\adminapp.js" />
+    <Content Include="Common\Scripts\app\couchPotatoService.js" />
+    <Content Include="Common\Scripts\app\detourService.js" />
+    <Content Include="Common\Scripts\app\formdesignerservice.js" />
+    <Content Include="Common\Scripts\app\logger.js" />
+    <Content Include="Common\Scripts\app\main.js" />
+    <Content Include="Common\Scripts\directives\cobusy-directive.js" />
+    <Content Include="Common\Scripts\directives\common.js" />
+    <Content Include="Common\Scripts\directives\dependency-directive.js" />
+    <Content Include="Common\Scripts\directives\jqGrid-directive.js" />
+    <Content Include="Common\Scripts\directives\picklist-directive.js" />
+    <Content Include="Common\Scripts\directives\wizard-directive.js" />
     <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.ar.js" />
     <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.bg-BG.js" />
     <Content Include="Common\Scripts\jQuery\jqGrid\i18n\grid.locale.bg.js" />
