--- a/src/Coevery.Web/Core/Coevery.Core.csproj
+++ b/src/Coevery.Web/Core/Coevery.Core.csproj
@@ -49,16 +49,25 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\lib\newtonsoft.json\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Http, Version=5.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\lib\aspnetwebapi\System.Web.Http.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\lib\aspnetmvc\System.Web.Mvc.dll</HintPath>
@@ -80,15 +89,20 @@
     <Compile Include="Common\Services\NavigationManager.cs" />
     <Compile Include="Common\Services\SafeModeThemeSelector.cs" />
     <Compile Include="Entities\Controllers\EntityController.cs" />
-    <Compile Include="Entities\Controllers\fieldController.cs" />
-    <Compile Include="Entities\Controllers\SystemAdminController.cs" />
+    <Compile Include="Entities\Controllers\FieldController.cs" />
+    <Compile Include="Entities\Controllers\AdminController.cs" />
     <Compile Include="Entities\Drivers\EntityMetadataPartDriver.cs" />
     <Compile Include="Entities\DynamicTypeGeneration\DynamicAssemblyBuilder.cs" />
+    <Compile Include="Entities\DynamicTypeGeneration\DynamicContentsHandler.cs" />
     <Compile Include="Entities\DynamicTypeGeneration\DynamicFieldDefinition.cs" />
     <Compile Include="Entities\DynamicTypeGeneration\DynamicTypeDefinition.cs" />
+    <Compile Include="Entities\DynamicTypeGeneration\IDynamicAssemblyBuilder.cs" />
+    <Compile Include="Entities\Events\IDynamicTypeGenerationEvents.cs" />
     <Compile Include="Entities\Events\IEntityDataEvents.cs" />
     <Compile Include="Entities\Events\IEntityEvents.cs" />
     <Compile Include="Entities\Events\IFieldEvents.cs" />
+    <Compile Include="Entities\Extensions\CoeveryContentExtension.cs" />
+    <Compile Include="Entities\Extensions\CoeveryStringExtension.cs" />
     <Compile Include="Entities\Extensions\ContentDefinitionServiceExtension.cs" />
     <Compile Include="Entities\Extensions\StringExtensions.cs" />
     <Compile Include="Entities\Handlers\EntityMetadataPartHandler.cs" />
