--- a/src/Coevery.Web/Core/Coevery.Core.csproj
+++ b/src/Coevery.Web/Core/Coevery.Core.csproj
@@ -49,16 +49,28 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.DirectX">
+      <HintPath>..\..\..\..\..\..\..\VoiceChat\lib\Microsoft.DirectX.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\lib\newtonsoft.json\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="NHibernate, Version=3.3.1.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\lib\nhibernate\NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\lib\aspnetwebapi\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.DynamicData" />
@@ -117,9 +129,11 @@
     <Compile Include="Entities\Services\ContentDefinitionService.cs" />
     <Compile Include="Entities\Services\ContentFieldValueProvider.cs" />
     <Compile Include="Entities\Services\ContentMetadataService.cs" />
+    <Compile Include="Entities\Services\DefaultDataMigrationInterpreter.cs" />
     <Compile Include="Entities\Services\IContentDefinitionService.cs" />
     <Compile Include="Entities\Services\IContentFieldFormatProvider.cs" />
     <Compile Include="Entities\Services\IContentFieldValueProvider.cs" />
+    <Compile Include="Entities\Services\SchemaUpdateService.cs" />
     <Compile Include="Entities\Services\SettingService.cs" />
     <Compile Include="Entities\Services\SystemAdminMenu.cs" />
     <Compile Include="Entities\Services\UpdateModelWithInitializer.cs" />
