--- a/src/Coevery.Web/Modules/Coevery.DeveloperTools/Coevery.DeveloperTools.csproj
+++ b/src/Coevery.Web/Modules/Coevery.DeveloperTools/Coevery.DeveloperTools.csproj
@@ -114,6 +114,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\EntityController.cs" />
     <Compile Include="Controllers\fieldController.cs" />
     <Compile Include="Drivers\EntityMetadataPartDriver.cs" />
@@ -138,6 +139,7 @@
     <Compile Include="Models\EntityMetadataRecord.cs" />
     <Compile Include="Models\FieldMetadataRecord.cs" />
     <Compile Include="Permissions.cs" />
+    <Compile Include="Routes.cs" />
     <Compile Include="Services\ClientRouteProvider.cs" />
     <Compile Include="Services\ContentDefinitionService.cs" />
     <Compile Include="Services\ContentFieldValueProvider.cs" />
@@ -209,6 +211,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Placement.info" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
