--- a/src/Coevery.Web/Modules/Coevery.DeveloperTools/Coevery.DeveloperTools.csproj
+++ b/src/Coevery.Web/Modules/Coevery.DeveloperTools/Coevery.DeveloperTools.csproj
@@ -114,7 +114,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AdminController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\EntityController.cs" />
     <Compile Include="Controllers\FieldController.cs" />
     <Compile Include="Drivers\EntityMetadataPartDriver.cs" />
@@ -167,43 +166,43 @@
     <Compile Include="ViewModels\FieldDependencyViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\SystemAdmin\ChooseFieldType.cshtml" />
+    <Content Include="Views\Admin\ChooseFieldType.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\SystemAdmin\ConfirmFieldInfo.cshtml" />
+    <Content Include="Views\Admin\ConfirmFieldInfo.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\SystemAdmin\Create.cshtml" />
+    <Content Include="Views\Admin\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\SystemAdmin\CreateDependency.cshtml" />
+    <Content Include="Views\Admin\CreateDependency.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\SystemAdmin\CreateEditInfo.cshtml" />
+    <Content Include="Views\Admin\CreateEditInfo.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\SystemAdmin\DependencyList.cshtml" />
+    <Content Include="Views\Admin\DependencyList.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\SystemAdmin\Detail.cshtml" />
+    <Content Include="Views\Admin\Detail.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\SystemAdmin\Edit.cshtml" />
+    <Content Include="Views\Admin\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\SystemAdmin\EditDependency.cshtml" />
+    <Content Include="Views\Admin\EditDependency.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\SystemAdmin\EditFields.cshtml" />
+    <Content Include="Views\Admin\EditFields.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\SystemAdmin\Fields.cshtml" />
+    <Content Include="Views\Admin\Fields.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\SystemAdmin\FillFieldInfo.cshtml" />
+    <Content Include="Views\Admin\FillFieldInfo.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\SystemAdmin\List.cshtml" />
+    <Content Include="Views\Admin\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Web.config" />
@@ -212,7 +211,7 @@
     <Content Include="Placement.info" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
