--- a/src/Coevery.Web/Modules/Coevery.DeveloperTools/Coevery.DeveloperTools.csproj
+++ b/src/Coevery.Web/Modules/Coevery.DeveloperTools/Coevery.DeveloperTools.csproj
@@ -113,7 +113,7 @@
     <Compile Include="Controllers\EntityController.cs" />
     <Compile Include="Controllers\FieldController.cs" />
     <Compile Include="Drivers\EntityMetadataPartDriver.cs" />
-    <Compile Include="DynamicTypeGeneration\ContentTypeSettings.cs" />
+    <Compile Include="Settings\ContentTypeSettings.cs" />
     <Compile Include="DynamicTypeGeneration\DynamicAssemblyBuilder.cs" />
     <Compile Include="DynamicTypeGeneration\DynamicContentsDriver.cs" />
     <Compile Include="DynamicTypeGeneration\DynamicContentsHandler.cs" />
@@ -136,20 +136,18 @@
     <Compile Include="Routes.cs" />
     <Compile Include="Services\ClientRouteProvider.cs" />
     <Compile Include="Services\ContentDefinitionService.cs" />
-    <Compile Include="Services\ContentFieldValueProvider.cs" />
+    <Compile Include="Providers\ContentFieldValueProvider.cs" />
     <Compile Include="Services\ContentMetadataService.cs" />
     <Compile Include="Services\DefaultDataMigrationInterpreter.cs" />
     <Compile Include="Services\IContentDefinitionService.cs" />
-    <Compile Include="Services\IContentFieldFormatProvider.cs" />
-    <Compile Include="Services\IContentFieldValueProvider.cs" />
+    <Compile Include="Providers\IContentFieldFormatProvider.cs" />
+    <Compile Include="Providers\IContentFieldValueProvider.cs" />
     <Compile Include="Services\SchemaUpdateService.cs" />
     <Compile Include="Services\SettingService.cs" />
     <Compile Include="Services\AdminMenu.cs" />
-    <Compile Include="Services\UpdateModelWithInitializer.cs" />
     <Compile Include="Settings\EntitySetting.cs" />
     <Compile Include="Settings\FieldEditorEvents.cs" />
     <Compile Include="Settings\FieldSettings.cs" />
-    <Compile Include="Settings\IContentDefinitionEditorEvents.cs" />
     <Compile Include="Settings\IEntityRecordEditorEvents.cs" />
     <Compile Include="ViewModels\AddFieldViewModel.cs" />
     <Compile Include="ViewModels\EditFieldViewModel.cs" />
