--- a/src/Coevery.Web/Modules/Coevery.DeveloperTools/Coevery.DeveloperTools.csproj
+++ b/src/Coevery.Web/Modules/Coevery.DeveloperTools/Coevery.DeveloperTools.csproj
@@ -110,6 +110,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\EntityController.cs" />
     <Compile Include="Controllers\FieldController.cs" />
     <Compile Include="Drivers\EntityMetadataPartDriver.cs" />
@@ -195,7 +196,7 @@
     <Content Include="Placement.info" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
